--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "circomlibjs": "^0.1.7",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.0",
+    "fixed-merkle-tree": "^0.7.3",
     "hardhat": "^2.24.0",
     "snarkjs": "^0.7.5"
   },
