--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@zk-kit/incremental-merkle-tree": "^1.1.0",
     "circomlibjs": "^0.1.7",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.0",
